--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./src/css/style/css" />
-    <title>Pixr</title>
+     <link rel="icon" href="%PUBLIC_URL%/pixr.ico" />
+      <title>Pixr</title>
   </head>
   <body>
     <div id="root"></div>
